welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: '(' expected but identifier found.
while !(estSurBisctuit(){
      ^Balin:7: error: illegal start of simple expression
	}
        ^